# company

./: .gitignore  README.md  decisions.md  decisions_archive_pre_day8.md  email-log.md  finances.md  hypotheses.md  live_dashboard.txt  post-log.md  status.md  waiting.md
.scripts/: agent-loop.sh
docs/: 0co-indexnow-2026.txt  about.html  activity.html  activity_data.json  agent-friend.html  agent-log-viewer.html  ai-convo-analyzer.html  alice-archaeology-data.json  alice-archaeology.html  alice-bot.html  alice-timeline.html  audit.html  benchmark.html  calc.html  claude-code-hook.sh  compare.html  constraints.html  conversation.html  convert.html  day5_plan.md  day6_plan.md  feed.html  finances.html  founders.html  grades.json  index.html  journal.html  leaderboard.html  listen.html  memory-evolution.html  network.html  network_data.json  posts.html  race-predictor.html  race.html  race_data.json  raid.html  report.html  robots.txt  semantic-emergence-data.json  (+8 more)
drafts/: anthropic-mcp-comments.md  article068_notion_audit.md  article071_27_servers.md  article072_owasp_gap.md  article076_official_mcp_servers.md  article_069_grading_other_ais.md  bitnet-issue-comments.md  bsky-2026-03-18.md  bsky_drafts_mar18.md  bsky_drafts_mar19.md  bsky_drafts_mar20.md  bsky_drafts_mar21.md  bsky_drafts_mar22.md  bsky_reply_mar19_aibottel.md  bsky_reply_mar19_ainerd_colab.md  bsky_reply_mar19_aroussi.md  bsky_reply_mar19_daniel_davia.md  bsky_reply_mar19_daniel_davia_2.md  bsky_reply_mar19_joozio.md  bsky_reply_mar19_onyx.md  bsky_reply_mar19_thenewstack.md  bsky_reply_mar19_tomasklingen.md  bsky_reply_mar19_wolfpack.md  notion_challenge_submission.md  sep-1576-comment.md
memory-archive/: MEMORY-20260311-0400.md  MEMORY-20260311-0457.md  MEMORY-20260311-0524.md  MEMORY-20260311-0559.md  MEMORY-20260311-0628.md  MEMORY-20260311-0648.md  MEMORY-20260311-0727.md  MEMORY-20260311-0800.md  MEMORY-20260311-0818.md  MEMORY-20260311-0840.md  MEMORY-20260311-1001.md  MEMORY-20260312-0001.md  MEMORY-current.md  README.txt
products/agent-budget/: README.md  pyproject.toml
products/agent-budget/agent_budget/: __init__.py  budget.py  pricing.py
products/agent-budget/examples/: agentic_loop.py  basic_anthropic.py
products/agent-cache/: README.md  pyproject.toml
products/agent-cache/agent_cache/: __init__.py  cache.py  wrappers.py
products/agent-cache/examples/: anthropic_cache.py  manual_cache.py  openai_cache.py
products/agent-cache/tests/: test_cache.py  test_wrappers.py
products/agent-checkpoint/: README.md  pyproject.toml
products/agent-checkpoint/agent_checkpoint/: __init__.py  checkpoint.py
products/agent-checkpoint/tests/: test_checkpoint.py
products/agent-constraints/: README.md  pyproject.toml
products/agent-constraints/agent_constraints/: __init__.py  constraints.py
products/agent-constraints/tests/: test_constraints.py
products/agent-context/: README.md  pyproject.toml
products/agent-context/agent_context/: __init__.py  context.py
products/agent-context/examples/: basic_usage.py  with_anthropic.py
products/agent-friend/: .dockerignore  Dockerfile  README.md  action.yml  api_server.py  demo.ipynb  demo_briefing.py  demo_live.py  glama.json  mcp_server.py  producthunt-draft.md  pyproject.toml  server.json
products/agent-friend/agent_friend/: __init__.py  __main__.py  audit.py  cli.py  config.py  fix.py  friend.py  grade.py  leaderboard_data.py  toolkit.py  validate.py
products/agent-friend/agent_friend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
products/agent-friend/agent_friend/examples/: __init__.py
products/agent-friend/agent_friend/providers/: __init__.py
products/agent-friend/agent_friend/tools/: __init__.py  base.py  batch_tool.py  email.py  env.py  function_tool.py  git.py  html_tool.py  http.py  metrics.py  rate_limit.py  regex_tool.py  sampler.py  stats_tool.py  table.py  transform_tool.py  workflow_tool.py  xml_tool.py
products/agent-friend/examples/: README.md
products/agent-friend/tests/: test_adapters.py  test_audit_cli.py  test_config.py  test_examples.py  test_friend.py  test_grade.py  test_leaderboard_data.py  test_providers.py  test_validate.py
products/agent-gate/: README.md  pyproject.toml
products/agent-gate/agent_gate/: __init__.py  exceptions.py  gate.py
products/agent-gate/examples/: basic_gate.py
products/agent-id/: README.md  pyproject.toml
products/agent-id/agent_id/: __init__.py  cli.py  exceptions.py  identity.py
products/agent-id/examples/: basic_multiagent.py
products/agent-log/: README.md  pyproject.toml
products/agent-log/agent_log/: __init__.py  logger.py  redactor.py  session.py  span.py
products/agent-log/tests/: test_agent_log.py
products/agent-mock/: README.md  pyproject.toml
products/agent-mock/agent_mock/: __init__.py  mock.py  wrappers.py
products/agent-mock/examples/: basic_mock.py
products/agent-mock/tests/: test_mock.py
products/agent-retry/: README.md  pyproject.toml
products/agent-retry/agent_retry/: __init__.py  exceptions.py  retry.py
products/agent-retry/examples/: basic_retry.py
products/agent-shield/: README.md  pyproject.toml
products/agent-shield/agent_shield/: __init__.py  cli.py  patterns.py  scanner.py
products/agent-shield/examples/: basic_scan.py
research/: INDEX-mcp-distribution-research-2026-03-18.md  airflow_mcp_tools.json  airtable_mcp_tools.json  alexander_supabase_mcp_tools.json  algolia_mcp_tools.json  amplitude_mcp_tools.json  analyze_schemas.py  anyquery_mcp_tools.json  apify_mcp_tools.json  apple_docs_mcp_tools.json  argocd_mcp_tools.json  arxiv_mcp_tools.json  asana_mcp_tools.json  auth0_mcp_tools.json  awkoy_notion_tools.json  aws_mcp_tools.json  axiom_mcp_tools.json  azure_devops_mcp_tools.json  benchmark-data.json  bigquery_mcp_tools.json  bitnet-deep-dive-2026-03-17.md  bitwarden_mcp_tools.json  box_mcp_tools.json  browserbase_mcp_tools.json  browsermcp_tools.json  chart_mcp_tools.json  chroma_mcp_tools.json  chrome-devtools-mcp-tools.json  chunkhound_mcp_tools.json  circleci_mcp_tools.json  (+175 more)
(+940 files in other folders)
