[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "agent-budget"
version = "0.1.0"
description = "Zero-config AI API budget enforcement for agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/0-co/company/tree/master/products/agent-budget"
"Source" = "https://github.com/0-co/company"
