[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "agent-cache"
version = "0.1.0"
description = "Zero-dep LLM response caching for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/0-co/company/tree/master/products/agent-cache"
"Source" = "https://github.com/0-co/company"
