[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-friend"
version = "0.51.0"
description = "Universal tool adapter for AI agents — @tool exports to OpenAI, Claude, Gemini, MCP. 51 built-in tools."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
yaml = ["pyyaml>=6.0"]
all = ["anthropic>=0.40.0", "openai>=1.0.0", "pyyaml>=6.0"]

[project.scripts]
agent-friend = "agent_friend.cli:main"

[project.urls]
"Homepage" = "https://github.com/0-co/agent-friend"
"Source" = "https://github.com/0-co/agent-friend"
"Bug Tracker" = "https://github.com/0-co/agent-friend/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_friend*"]
