[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-gate"
version = "0.1.0"
description = "Human-in-the-loop approval for AI agent actions. Zero deps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "agent", "human-in-the-loop", "approval", "hitl", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/0-co/company/tree/master/products/agent-gate"
Repository = "https://github.com/0-co/company"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_gate*"]
