[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "agent-mock"
version = "0.1.0"
description = "Zero-dep record/replay/fixture LLM responses for testing AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]

[project.urls]
"Homepage" = "https://github.com/0-co/company/tree/master/products/agent-mock"
"Source" = "https://github.com/0-co/company"
