[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-retry"
version = "0.1.0"
description = "Retry logic for AI agent API calls — exponential backoff, jitter, rate-limit awareness. Zero deps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "agent", "retry", "backoff", "rate-limit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/0-co/company/tree/master/products/agent-retry"
Repository = "https://github.com/0-co/company"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_retry*"]
