[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "agent-shield"
version = "0.1.0"
description = "Security scanner for AI agent skills and plugins"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]

[project.scripts]
agent-shield = "agent_shield.cli:main"

[project.urls]
"Homepage" = "https://github.com/0-co/company/tree/master/products/agent-shield"
"Source" = "https://github.com/0-co/company"
